#4rjfa1 - Make Indicator column bold

--- a/src/app/pages/indicator/indicator.component.html
+++ b/src/app/pages/indicator/indicator.component.html
@@ -49,7 +49,7 @@
             Level
           </th>
           <th nzShowSort nzSortKey="level">
-            Indicator
+            <b>Indicator</b>
           </th>
           <th nzShowSort nzSortKey="description" nzWidth="100px">Description</th>
           <th nzShowSort nzSortKey="description" nzWidth="100px">Thematic Area</th>
@@ -75,7 +75,7 @@
             <td>
               <nz-tag [nzColor]="data.color">{{ data.level }} </nz-tag>
             </td>
-            <td>{{ data.label }}</td>
+            <td><b>{{ data.label }}</b></td>
             <td></td>
             <td>{{ data.description }}</td>
             <td></td>
