Changed text to Source

--- a/src/app/pages/indicator/indicator.component.html
+++ b/src/app/pages/indicator/indicator.component.html
@@ -97,7 +97,7 @@
             Thematic Area
           </th>
           <th nzShowSort nzSortKey="description" nzWidth="200px">
-            Source/Attribution
+            Source
           </th>
           <th nzShowSort nzSortKey="description" nzWidth="200px">
             Disaggregation
