--- a/src/theme.less
+++ b/src/theme.less
@@ -6,10 +6,10 @@
 @html-selector: html;
 
 // -------- Colors -----------
-@primary-color: #630060; // @blue-6;
-@info-color: #630060; // @blue-6;
+@primary-color:  @blue-6;
+@info-color: @blue-6;
 @success-color: @green-6;
-@processing-color: #630060;// @blue-6;
+@processing-color: @blue-6;
 @error-color: @red-6;
 @highlight-color: @red-6;
 @warning-color: @gold-6;
