4rjem5  merge feature/indicator_steps

--- a/src/app/pages/indicator/scanresult/scanresult.component.html
+++ b/src/app/pages/indicator/scanresult/scanresult.component.html
@@ -18,6 +18,7 @@
   nzShowPagination="false"
   nzShowSizeChanger="false"
   [nzPageSize]="displayData.length"
+  nzSize='middle'
   nzBordered
   >
   <thead
@@ -43,6 +44,7 @@
         nzShowSort
         nzSortKey="label"
         tooltip="Indicator name"
+        style="font-weight: bold;"
         >
         Indicator
       </th>
