--- a/src/theme.less
+++ b/src/theme.less
@@ -184,7 +184,7 @@
 
 // Checkbox
 @checkbox-size: 16px;
-@checkbox-color: @primary-color;
+@checkbox-color: #453457; // @primary-color;
 @checkbox-check-color: #fff;
 @checkbox-border-width: @border-width-base;
 
