--- a/src/app/pages/indicator/selectdocument/selectdocument.component.html
+++ b/src/app/pages/indicator/selectdocument/selectdocument.component.html
@@ -8,7 +8,7 @@ nzAccept=".doc,.docx"
 [nzBeforeUpload]="beforeUpload"
 [nzShowUploadList]="false"
 >
-<div style="margin: auto;">
+<div style="margin: auto;min-height: 300px;">
   <p class="ant-upload-drag-icon">
     <img src="assets/icons-ms-word-96.png">
   </p>
