--- a/src/app/pages/indicator/scanresult/scanresult.component.html
+++ b/src/app/pages/indicator/scanresult/scanresult.component.html
@@ -10,7 +10,7 @@
     >
 </div>
 <div style="display: flex;flex-direction: row;margin: 10px;">
-  <span>Total:  {{ listOfData.length }} - selected: Imact  {{ impactCount }}, Outcome  {{ outcomeCount }}, Output  {{ outputCount }}</span>
+  <span>Total:  {{ listOfData.length }} - selected: Impact  {{ impactCount }}, Outcome  {{ outcomeCount }}, Output  {{ outputCount }}</span>
 </div>
 <nz-table
   #dynamicTable
@@ -106,7 +106,7 @@
           </div>
         </td>
         <td>{{ data.themes }}</td>
-        <td>{{ data.crsCode }}</td>
+        <td>{{ data.crsCode | number:'1.0-0'}}</td>
         <td>{{ data.sdgCode }}</td>
       </tr>
     </ng-template>
