--- a/src/app/pages/indicator/indicatorfilters/indicatorfilters.component.html
+++ b/src/app/pages/indicator/indicatorfilters/indicatorfilters.component.html
@@ -4,33 +4,44 @@
       <label>Themes:</label><br>
       <nz-select
         nzMode="multiple"
-        (ngModelChange)="onChangeThemeFiler($event)"
+        (ngModelChange)="onChangeFilter('themes', $event)"
         nzPlaceHolder="Filter by themes"
-        [(ngModel)]="listOfSelectedThemeValues"
+        [(ngModel)]="selectedValues.themes"
       >
-        <nz-option *ngFor="let option of listOfOption" [nzLabel]="option" [nzValue]="option"
-                   [nzHide]="!isNotSelected(listOfSelectedThemeValues, option)"></nz-option>
+        <nz-option *ngFor="let option of filterOptions.themes" [nzLabel]="option" [nzValue]="option"
+                   [nzHide]="!isNotSelected(selectedValues.themes, option)"></nz-option>
       </nz-select>
     </div>
     <div>
       <label>Sources:</label><br>
-      <nz-select nzMode="multiple" nzPlaceHolder="Filter by sources" [(ngModel)]="selectedSources">
-        <nz-option *ngFor="let option of sourcesFilterOptions" [nzLabel]="option" [nzValue]="option"
-                   [nzHide]="!isNotSelected(selectedSources, option)"></nz-option>
+      <nz-select nzMode="multiple" nzPlaceHolder="Filter by sources" [(ngModel)]="selectedValues.source"
+                 (ngModelChange)="onChangeFilter('source', $event)">
+        <nz-option *ngFor="let option of filterOptions.source" [nzLabel]="option" [nzValue]="option"
+                   [nzHide]="!isNotSelected(selectedValues.themes, option)"></nz-option>
       </nz-select>
     </div>
     <div>
       <label>SDGs:</label><br>
-      <nz-select nzMode="multiple" nzPlaceHolder="Filter by SDG" [(ngModel)]="selectedSdgCodes">
-        <nz-option *ngFor="let option of sdgCodesFilterOptions" [nzLabel]="option" [nzValue]="option"
-                   [nzHide]="!isNotSelected(selectedSdgCodes, option)"></nz-option>
+      <nz-select nzMode="multiple" nzPlaceHolder="Filter by SDGs" [(ngModel)]="selectedValues.sdg_code"
+                 (ngModelChange)="onChangeFilter('sdg_code', $event)">
+        <nz-option *ngFor="let option of filterOptions.sdg_code" [nzLabel]="option" [nzValue]="option"
+                   [nzHide]="!isNotSelected(selectedValues.sdg_code, option)"></nz-option>
       </nz-select>
     </div>
     <div>
       <label>Levels:</label><br>
-      <nz-select nzMode="multiple" nzPlaceHolder="Filter by levels" [(ngModel)]="selectedLevels">
-        <nz-option *ngFor="let option of levelsFilterOptions" [nzLabel]="option.name" [nzValue]="option.id"
-                   [nzHide]="!isNotSelected(selectedLevels, option.id)"></nz-option>
+      <nz-select nzMode="multiple" nzPlaceHolder="Filter by levels" [(ngModel)]="selectedValues.level"
+                 (ngModelChange)="onChangeFilter('level', $event)">
+        <nz-option *ngFor="let option of filterOptions.level" [nzLabel]="option.name" [nzValue]="option.id"
+                   [nzHide]="!isNotSelected(selectedValues.level, option.id)"></nz-option>
+      </nz-select>
+    </div>
+    <div>
+      <label>DACs:</label><br>
+      <nz-select nzMode="multiple" nzPlaceHolder="Filter by DACs" [(ngModel)]="selectedValues.crs_code"
+                 (ngModelChange)="onChangeFilter('crs_code', $event)">
+        <nz-option *ngFor="let option of filterOptions.crs_code" [nzLabel]="option" [nzValue]="option"
+                   [nzHide]="!isNotSelected(selectedValues.crs_code, option)"></nz-option>
       </nz-select>
     </div>
   </div>
