Add coming soon to the dialog

--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -3,10 +3,12 @@
 	</button>
 	<h1 class="dialog__title" ><b>Learn Arqaam Goals</b>
 	</h1>
-	<div class="dialog__video"><iframe width="auto" height="auto" src="https://www.youtube.com/embed/6wD4V0rvlDI?list=PLEsfXFp6DpzQThMU768hTZInWUqfoyTEW" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	</div>
+	<div class="dialog__video" style="text-align: center;">
+    <!--iframe width="auto" height="auto" src="https://www.youtube.com/embed/6wD4V0rvlDI?list=PLEsfXFp6DpzQThMU768hTZInWUqfoyTEW" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe -->
+    <h3 style="margin-top: 50px;">Coming Soon</h3>
+  </div>
 	<div>
-	<h3 class="dialog__about">The goals of Arqaam are... This test example text will now run to the next line to show how text is displayed.  
+	<h3 class="dialog__about">The goals of Arqaam are... This test example text will now run to the next line to show how text is displayed.
 	</h3>
 </div>
 	<div>
