Add How to use Logframe Lab to the dialog

--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -1,7 +1,7 @@
 <nz-layout [@dialog] *ngIf="visible" class="dialog">
 	<button nz-button *ngIf="closable" (click)="close()" aria-label="Close" class="dialog__close-btn">&#x2716;
 	</button>
-	<h1 class="dialog__title" ><b>Learn Arqaam Goals</b>
+	<h1 class="dialog__title" ><b>How to use Logframe Lab</b>
 	</h1>
 	<div class="dialog__video" style="text-align: center;">
     <!--iframe width="auto" height="auto" src="https://www.youtube.com/embed/6wD4V0rvlDI?list=PLEsfXFp6DpzQThMU768hTZInWUqfoyTEW" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe -->
