fix crsCode string formatting html

--- a/src/app/pages/indicator/scanresult/scanresult.component.html
+++ b/src/app/pages/indicator/scanresult/scanresult.component.html
@@ -106,7 +106,7 @@
           </div>
         </td>
         <td>{{ data.themes }}</td>
-        <td>{{ data.crsCode | number:'1.0-0'}}</td>
+        <td>{{ formatCrsCode(data.crsCode) }}</td>
         <td>{{ data.sdgCode }}</td>
       </tr>
     </ng-template>
