--- a/src/app/pages/indicator/scanresult/scanresult.component.html
+++ b/src/app/pages/indicator/scanresult/scanresult.component.html
@@ -1,3 +1,5 @@
+<nz-alert nzType="warning" nzMessage="No indicators found during the document scanning" nzShowIcon nzCloseable="true"></nz-alert>
+
 <div style="position: relative;">
   <input
     (input)="search()"
