prettier code formatter

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <div nz-row>
       <div nz-col nzSpan="6">
         <a style="color: black;" routerLink="/" routerLinkActive="active">
-          <img src="assets/logo-11-1.png">
+          <img src="assets/logo-11-1.png" />
         </a>
       </div>
       <!--div nz-col nzSpan="18">
@@ -19,21 +19,23 @@
     <router-outlet></router-outlet>
   </nz-content>
   <nz-footer>
-    <div><br>
-        <img src="assets/arqaam-13 1.png"><br>
-        <a href="/terms">Terms Of Use </a><br>
-        <a href="/dataprotection">Data Protection Declaration</a><br>
-        <a href="/imprint">Imprint</a><br><br>
-      </div>
-      <div
-        style="height:28px;background-color: #222222;">
-        <a style="line-height: 28px;"
-          href="http://arqaam.org"
-          target="_blank" href="#"
-          >
-          Logframe Lab ©2020 developed By Arqaam GmbH
-        </a>
-      </div>
+    <div>
+      <br />
+      <img src="assets/arqaam-13 1.png" /><br />
+      <a href="/terms">Terms Of Use </a><br />
+      <a href="/dataprotection">Data Protection Declaration</a><br />
+      <a href="/imprint">Imprint</a><br /><br />
+    </div>
+    <div style="height: 28px; background-color: #222222;">
+      <a
+        style="line-height: 28px;"
+        href="http://arqaam.org"
+        target="_blank"
+        href="#"
+      >
+        Logframe Lab ©2020 developed By Arqaam GmbH
+      </a>
+    </div>
   </nz-footer>
 </nz-layout>
 <app-pop></app-pop>
