--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,10 +7,10 @@ nz-footer {
   padding: 0;
 }
 nz-header {
-border-bottom-style: solid;
-border-bottom-color: #e8e8e8;
-border-bottom-width: 1px;
-background-image: url('/assets/Rectangle3.png');
+  border-bottom-style: solid;
+  border-bottom-color: #e8e8e8;
+  border-bottom-width: 1px;
+  background-image: url("/assets/Rectangle3.png");
 }
 nz-footer {
   border-top-style: solid;
@@ -18,7 +18,7 @@ nz-footer {
   border-top-width: 1px;
   color: white;
   background-color: #ffffff;
-  background-image: url('/assets/Rectangle3.png');
+  background-image: url("/assets/Rectangle3.png");
   text-align: center;
   font-size: 11px;
   a {
