--- a/src/app/pages/indicator/indicator.component.html
+++ b/src/app/pages/indicator/indicator.component.html
@@ -11,7 +11,13 @@
     <button nz-button nzType="default" (click)="pre()" *ngIf="current > 0">
       <span>Previous</span>
     </button>
-    <button [(disabled)]="!isNext" nz-button nzType="default" (click)="next()" *ngIf="current < 5">
+    <button
+      [(disabled)]="!isNext"
+      nz-button
+      nzType="default"
+      (click)="next()"
+      *ngIf="current < 5"
+    >
       <span>Next</span>
     </button>
     <button nz-button nzType="primary" (click)="done()" *ngIf="current === 5">
@@ -19,17 +25,11 @@
     </button>
   </div>
   <div class="steps-content">
-    <app-selectdocument *ngIf="current === 0">
-    </app-selectdocument>
-    <app-indicatorfilters *ngIf="current === 1">
-    </app-indicatorfilters>
-    <app-scandocument *ngIf="current === 2">
-    </app-scandocument>
-    <app-scanresult *ngIf="current === 3">
-    </app-scanresult>
-    <app-visualisationresult *ngIf="current === 4">
-    </app-visualisationresult>
-    <app-downloadresult *ngIf="current === 5">
-    </app-downloadresult>
+    <app-selectdocument *ngIf="current === 0"> </app-selectdocument>
+    <app-indicatorfilters *ngIf="current === 1"> </app-indicatorfilters>
+    <app-scandocument *ngIf="current === 2"> </app-scandocument>
+    <app-scanresult *ngIf="current === 3"> </app-scanresult>
+    <app-visualisationresult *ngIf="current === 4"> </app-visualisationresult>
+    <app-downloadresult *ngIf="current === 5"> </app-downloadresult>
   </div>
 </div>
