--- a/src/app/pages/indicator/selectdocument/selectdocument.component.html
+++ b/src/app/pages/indicator/selectdocument/selectdocument.component.html
@@ -1,21 +1,21 @@
 <nz-upload
-nzType="drag"
-[nzMultiple]="false"
-nzAccept=".doc,.docx"
-[nzLimit]="1"
-[nzSize]="25000"
-[(nzFileList)]="fileList"
-[nzBeforeUpload]="beforeUpload"
-[nzShowUploadList]="false"
+  nzType="drag"
+  [nzMultiple]="false"
+  nzAccept=".doc,.docx"
+  [nzLimit]="1"
+  [nzSize]="25000"
+  [(nzFileList)]="fileList"
+  [nzBeforeUpload]="beforeUpload"
+  [nzShowUploadList]="false"
 >
-<div style="margin: auto;min-height: 300px;">
-  <p class="ant-upload-drag-icon">
-    <img src="assets/icons-ms-word-96.png">
-  </p>
-  <p class="ant-upload-text">Click to this area to upload Word document</p>
-  <p class="ant-upload-hint">
-    Support for a single word file upload.
-  </p>
-  <p>{{ fileName }}</p>
-</div>
+  <div style="margin: auto; min-height: 300px;">
+    <p class="ant-upload-drag-icon">
+      <img src="assets/icons-ms-word-96.png" />
+    </p>
+    <p class="ant-upload-text">Click to this area to upload Word document</p>
+    <p class="ant-upload-hint">
+      Support for a single word file upload.
+    </p>
+    <p>{{ fileName }}</p>
+  </div>
 </nz-upload>
