--- a/src/app/pages/indicator/visualisationresult/visualisationresult.component.html
+++ b/src/app/pages/indicator/visualisationresult/visualisationresult.component.html
@@ -1,5 +1,4 @@
 <div style="min-height: 300px;">
-  <img style="margin-top: 50px;" src="assets/waiting2.png">
+  <img style="margin-top: 50px;" src="assets/waiting2.png" />
   <h3 style="margin-top: 20px;">COMING SOON</h3>
 </div>
-
