fix alert no indicators found during the document scanning

--- a/src/app/pages/indicator/scanresult/scanresult.component.html
+++ b/src/app/pages/indicator/scanresult/scanresult.component.html
@@ -1,4 +1,5 @@
 <nz-alert
+  *ngIf="listOfData.length === 0"
   nzType="warning"
   nzMessage="No indicators found during the document scanning"
   nzShowIcon
