keyword frequency column added

--- a/src/app/pages/indicator/indicatorfilters/indicatorfilters.component.html
+++ b/src/app/pages/indicator/indicatorfilters/indicatorfilters.component.html
@@ -61,5 +61,9 @@
         ></nz-option>
       </nz-select>
     </div>
+    <div>
+      <label>Frequency of Keywords:</label><br />
+      <nz-slider [nzTooltipVisible]="'default'"></nz-slider>
+    </div>
   </div>
 </div>
