--- a/src/app/pages/indicator/indicator.component.html
+++ b/src/app/pages/indicator/indicator.component.html
@@ -12,7 +12,7 @@
       <span>Previous</span>
     </button>
     <button
-      [(disabled)]="!isNext"
+      [disabled]="!isNext"
       nz-button
       nzType="default"
       (click)="next()"
